fix question spacing

--- a/src/styles/components/_question.scss
+++ b/src/styles/components/_question.scss
@@ -3,7 +3,7 @@
     background: #ffe185;
     border-radius: 5px;
     padding: 0 20px;
-    margin: 1.5rem 0 2rem 0;
+    margin-bottom: 20px;
 
     display: flex;
     justify-content: center;
